--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@types/node": "^14.14.6",
     "@types/react": "^16.9.56",
     "@types/react-dom": "^16.9.9",
+    "@types/react-redux": "^7.1.11",
+    "@types/redux-form": "^8.3.0",
     "@typescript-eslint/parser": "^4.6.1",
     "bootstrap": "^4.5.3",
     "node-sass": "^4.14.1",
@@ -18,6 +20,7 @@
     "react-redux": "^7.2.2",
     "react-scripts": "4.0.0",
     "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
     "redux-form": "^8.3.6",
     "typescript": "^4.0.5",
     "web-vitals": "^0.2.4"
